--- a/.releaserc
+++ b/.releaserc
@@ -1,11 +1,6 @@
 {
   "branches": [
-    "+([0-9])?(.{+([0-9]),x}).x",
-    "master",
-    {
-      "name": "beta",
-      "prerelease": true
-    }
+    { "name": "beta", "channel": "beta", "prerelease": true }
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
@@ -17,7 +12,7 @@
       "semantic-release-slack-bot",
       {
         "notifyOnSuccess": true,
-        "notifyOnFail": true
+        "notifyOnFail": false
       }
     ]
   ]
