--- a/example-app/package.json
+++ b/example-app/package.json
@@ -5,13 +5,13 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node build/src/index.js",
-    "dev": "yarn build && concurrently \"yarn build --watch\" \"nodemon --ext '.js' --watch ../lib --watch ./build node build/index.js\""
+    "start": "dotenv -e .env -- node build/index.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/node": "^8.0.29",
     "concurrently": "^5.2.0",
+    "dotenv-cli": "^4.0.0",
     "nodemon": "^2.0.4",
     "prisma": "^3.2.1",
     "ts-node": "3.3.0",
