chore: add slack webhook for successful releases

--- a/.releaserc
+++ b/.releaserc
@@ -12,7 +12,7 @@
     [
       "semantic-release-slack-bot",
       {
-        "notifyOnSuccess": false,
+        "notifyOnSuccess": true,
         "notifyOnFail": false
       }
     ]
