--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "license": "MIT",
   "peerDependencies": {
     "@prisma/client": "^3.2.1",
-    "adminjs": "^5.0.0"
+    "adminjs": ">=6.0.0"
   },
   "prisma": {
     "schema": "spec/prisma/schema.prisma"
@@ -50,7 +50,7 @@
     "@types/node": "12.0.10",
     "@typescript-eslint/eslint-plugin": "^3.7.0",
     "@typescript-eslint/parser": "^3.7.0",
-    "adminjs": "^5.0.0",
+    "adminjs": "^6.0.0",
     "dotenv-cli": "^4.0.0",
     "eslint": "^7.5.0",
     "eslint-config-airbnb": "^18.2.0",
