fix: update MongoDB records
Add docker-compose, update README & Fix update records when provider is MongoDB

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "ts-node": "ts-node",
     "lint": "eslint './src/**/*.{ts,js}' './spec/**/*.{ts,js}' './example-app/**/*.{ts,js}' --ignore-pattern 'build' --ignore-pattern 'yarn.lock'",
     "check:all": "yarn lint && yarn test && yarn build",
-    "release": "semantic-release"
+    "release": "semantic-release",
+    "prisma-migrate": "prisma migrate dev --name init"
   },
   "repository": {
     "type": "git",
