--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
+    "module": "nodenext",
+    "moduleResolution": "nodenext",
+    "target": "esnext",
     "lib": [
-      "es2018",
+      "esnext",
       "DOM"
     ],
     "skipLibCheck": true,
@@ -16,11 +17,7 @@
     "outDir": "./lib",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "baseUrl": ".",
-    "paths": {
-      "react": ["node_modules/@types/react"],
-      "styled-components": ["node_modules/@types/styled-components"]
-    }
+    "baseUrl": "."
   },
   "include": [
     "./src/**/*.ts"
