--- a/example-app/package.json
+++ b/example-app/package.json
@@ -1,31 +1,30 @@
 {
   "name": "example-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "start": "dotenv -e .env -- node build/index.js"
   },
   "devDependencies": {
-    "@types/express": "^4.17.7",
-    "@types/node": "^8.0.29",
-    "concurrently": "^5.2.0",
-    "dotenv-cli": "^4.0.0",
-    "nodemon": "^2.0.4",
-    "prisma": "^3.2.1",
-    "ts-node": "3.3.0",
-    "typescript": "^4.4.4"
+    "@types/express": "^4.17.17",
+    "@types/node": "^18",
+    "dotenv-cli": "^7.0.0",
+    "prisma": "^4.11.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "@adminjs/express": "^4.0.0",
-    "@adminjs/prisma": "^1.0.0",
-    "@prisma/client": "^3.2.1",
-    "adminjs": "^5.0.0",
-    "express": "^4.17.1",
+    "@adminjs/express": "^5.1.0",
+    "@adminjs/prisma": "^3.0.1",
+    "@prisma/client": "^4.11.0",
+    "adminjs": "^6.8.7",
+    "express": "^4.18.2",
     "express-formidable": "^1.2.0",
-    "express-session": "^1.17.1",
-    "pg": "^8.3.0",
-    "reflect-metadata": "^0.1.10"
+    "express-session": "^1.17.3",
+    "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.5.0"
   }
 }
