--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "prisma admin",
     "admin panel"
   ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "type": "module",
+  "exports": {
+    ".": {
+      "import": "./lib/index.js",
+      "types": "./lib/index.d.ts",
+      "require": "./lib/index.js"
+    }
+  },
   "scripts": {
     "clean": "rm -fR lib",
     "build": "tsc",
@@ -34,39 +40,39 @@
   "author": "Rafał Dzięgielewski <rafal.dzieg@gmail.com>",
   "license": "MIT",
   "peerDependencies": {
-    "@prisma/client": "^4.0.0",
-    "adminjs": ">=6.0.0"
+    "@prisma/client": "^4.11.0",
+    "adminjs": "^6.8.7"
   },
   "prisma": {
     "schema": "spec/prisma/schema.prisma"
   },
   "optionalDependencies": {},
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
-    "@prisma/client": "^4.0.0",
-    "@semantic-release/git": "^9.0.0",
-    "@types/jest": "^27.0.2",
-    "@types/node": "12.0.10",
-    "@typescript-eslint/eslint-plugin": "^3.7.0",
-    "@typescript-eslint/parser": "^3.7.0",
-    "adminjs": "^6.0.0",
-    "dotenv-cli": "^4.0.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@prisma/client": "^4.11.0",
+    "@semantic-release/git": "^10.0.1",
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18",
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "adminjs": "^6.8.7",
+    "dotenv-cli": "^7.0.0",
+    "eslint": "^8.35.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^4.2.5",
-    "jest": "^27.2.5",
-    "pg": "^7.12.1",
-    "prisma": "^4.0.0",
-    "semantic-release": "^17.0.7",
-    "semantic-release-slack-bot": "^1.6.2",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^8.4.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.3"
+    "jest": "^29.5.0",
+    "pg": "^8.10.0",
+    "prisma": "^4.11.0",
+    "semantic-release": "^20.1.1",
+    "semantic-release-slack-bot": "^4.0.0",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
+    "typescript": "^4.9.5"
   }
 }
