chore: fix test

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -59,11 +59,10 @@ jobs:
         run: yarn install
       - name: Lint
         run: yarn lint
-      # TODO: Figure out why tests fail in CI but pass locally
-      # - name: Migrate
-      #   run: npx prisma migrate dev
-      # - name: Test
-      #   run: yarn test
+      - name: Migrate
+        run: npx prisma migrate dev
+      - name: Test
+        run: yarn test
  
   publish:
     name: Publish
