--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,13 +22,13 @@ jobs:
         if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn install
 
-  test:
-    name: Test
+  test-postgres:
+    name: Tests with postgres
     runs-on: ubuntu-latest
     needs: setup
     env:
       NODE_ENV: test
-      DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/prisma_example_test?schema=public"
+      POSTGRESQL_DATABASE_URL: "postgresql://postgres:postgres@localhost:5432/prisma_example_test?schema=public"
     services:
       postgres:
         image: postgres:10.8
@@ -59,14 +59,52 @@ jobs:
         run: yarn install
       - name: Lint
         run: yarn lint
-      - name: Migrate
-        run: npx prisma migrate dev
+      - name: Setup prisma for tests
+        run: yarn test:setup:postgresql
       - name: Test
         run: yarn test
- 
+
+  test-mongo:
+    name: Tests with mongo
+    runs-on: ubuntu-latest
+    needs: setup
+    env:
+      NODE_ENV: test
+      MONGO_DATABASE_URL: "mongodb://root:example@localhost:27017/example?authSource=admin"
+    services:
+      mongo:
+        image: prismagraphql/mongo-single-replica:4.4.3-bionic
+        env:
+          MONGO_INITDB_ROOT_USERNAME: root
+          MONGO_INITDB_ROOT_PASSWORD: example
+          MONGO_INITDB_DATABASE: example
+        ports:
+          - 27017:27017
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+      - uses: actions/cache@v1
+        id: yarn-cache
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node_modules-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node_modules-
+      - name: Install
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn install
+      - name: Setup prisma for tests
+        run: yarn test:setup:mongo
+      - name: Test
+        run: yarn test
+
   publish:
     name: Publish
-    needs: test
+    needs: [test-mongo, test-postgres]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
