--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "license": "MIT",
   "peerDependencies": {
     "@prisma/client": "^4.8.1",
-    "adminjs": "^6.8.7"
+    "adminjs": "^7.0.0"
   },
   "prisma": {
     "schema": "spec/prisma/schema.prisma"
@@ -57,7 +57,7 @@
     "@types/node": "^18",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
-    "adminjs": "^7.0.0-beta-v7.5",
+    "adminjs": "^7.0.0",
     "dotenv-cli": "^7.0.0",
     "eslint": "^8.35.0",
     "eslint-config-airbnb": "^19.0.4",
